<?xml version="1.0"?>
<package format="3">
  <name>boost_sml</name>
  <version>1.0.0</version>
  <description>Colcon package providing boost state machine language headers</description>
  <maintainer email="simon.hoffmann@tum.de">Simon Hoffmann</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
